@@ -1,5 +1,17 @@
 2012-12-18  Alice Liu  <alice.liu@apple.com>
 
+        Test for https://bugs.webkit.org/show_bug.cgi?id=105106
+        Add SPI to WebKit1 WebFrame for hit testing
+
+        Reviewed by Dan Bernstein.
+
+        * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj: Added file Tests/mac/ElementAtPointInWebFrame.mm
+        * TestWebKitAPI/Tests/mac/ElementAtPointInWebFrame.mm: Added.
+        (TestWebKitAPI::TEST): Loads html with two divs positioned in the 2nd and 4th quadrants of the webview.
+        Then hit-tests at three points, expecting to hit the two divs and body element. 
+
+2012-12-18  Alice Liu  <alice.liu@apple.com>
+
         Test for https://bugs.webkit.org/show_bug.cgi?id=105262
         Add SPI to WebKit1 WebFrame for node conversion to JSValueRef
 
