@@ -1,5 +1,17 @@
 2012-12-18  Alice Liu  <alice.liu@apple.com>
 
+        Add SPI to WebKit1 WebFrame for hit testing
+        https://bugs.webkit.org/show_bug.cgi?id=105106
+
+        Reviewed by Dan Bernstein.
+
+        * WebView/WebFrame.mm:
+        (-[WebFrame elementAtPoint:]): Added. Takes an NSPoint to feed to the WebCore::Frame for hit-testing.
+        Creates a WebElementDictionary from that WebCore::HitTestResult, and returns the element dictionary. 
+        * WebView/WebFramePrivate.h:
+
+2012-12-18  Alice Liu  <alice.liu@apple.com>
+
         Add SPI to WebKit1 WebFrame for node conversion to JSValueRef
         https://bugs.webkit.org/show_bug.cgi?id=105262
 
